# tablemd

./: .gitignore  README.md  pyproject.toml  tablemd.bat  tablemd.properties  tablemd.py
