[tool.poetry]
name = "tablemd"
version = "0.1.0"
description = ""
authors = ["iamhero1210@qq.com <iamhero.1210@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cx-oracle = "^8.3.0"
pyodbc = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
